<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="onresponse_unsuccessful">Response from server unsuccessful, please try again later.</string>
    <string name="onfailure">Connection to server failed, please try again.</string>
    <string name="check_connection">Please check your internet connection and try again</string>
    <string name="xmpp_waiting_connection">Waiting for connection&#8230;</string>
    <string name="gps_accurate">Location accuracy can be improved by turning choosing high
    accuracy in location services</string>
    <string name="allow">Allow</string>
    <string name="whitelist_msg">Please add Soapp into any whiltelists for battery manager apps if you can\'t receive push notifications</string>
    <string name="dialogcheckbox">don\'t ask again</string>
    <string name="whitelist_title">Push Notifications</string>
    <string name="whitelist_asus_msg">Please allow Soapp to receive push notifications in
        the Auto-start Manager.</string>
    <string name="whitelist_huawei_msg">Please allow Soapp to receive push notifications under Protected Apps.</string>
    <string name="whitelist_samsung_msg">Please disable battery optimisation for Soapp by
        clicking on the \"Detail\" button in the next screen to receive push notifications.</string>
    <string name="whitelist_denied">You may not be able to receive push notifications from your
        friends or appointment reminders</string>
    <string name="whitelist_allowed">Push Notifications Permission Enabled</string>
    <string name="oppo_last_msg">Whitelist Soapp</string>
    <string name="oppo_whitelist_app_manual">To get push notifications, lock Soapp in the
    recent apps tab by dragging it downwards</string>
    <string name="cancel">Cancel</string>
    <string name="share_confirm_title">Confirm Sharing</string>
    <string name="share_confirm">Share item to</string>
    <string name="update">Update</string>
    <string name="new_ver_avail">New Version Available</string>
    <string name="update_expired_msg">Please update Soapp to the latest version to continue
    using Soapp.</string>
    <string name="update_half_expired_msg">Please update Soapp to enjoy the latest features
        available.</string>
    <string name="update_failed">Unable to open Google Play Store - please update Soapp
        manually by searching for \"Soapp\" in Google Play Store</string>
    <string name="update_half_expired_cancel">You will not be able to access Soapp after </string>
    <string name="days">day(s).</string>
    <string name="ok_label">OK</string>
    <string name="share_to_appt">Update appointment</string>
    <string name="share_to_chat">Share to chat room</string>
    <string name="media_gallery">Select Media</string>
    <string name="crop_image">Processing Image</string>
    <string name="open_settings">Open Settings</string>
    <string name="need_basic_title">Permissions Required</string>
    <string name="need_camera">Please allow camera and storage access to start taking pictures.</string>
    <string name="need_gallery">Please allow storage access to start viewing photos in the gallery.</string>
    <string name="need_audio_title">Microphone and Storage Access Required</string>
    <string name="need_audio">Please allow microphone and storage access to start recording audio.</string>
    <string name="start_audio">Permission granted! Tap and hold onto the microphone to
        start recording audio.</string>
    <string name="need_res_loc_title">Location Access Required</string>
    <string name="need_res_loc">Please allow location access to start searching for nearby
        restaurants</string>
    <string name="need_appt_loc">Please allow location access to start access map nearby functions</string>
    <string name="need_res_gps_title">GPS Required</string>
    <string name="need_res_gps">Please turn on GPS to start searching for nearby restaurants.</string>
    <string name="need_phone_title">Phone Call Permission</string>
    <string name="need_phone">Please allow phone call access to start a phone call.</string>
    <string name="permission_txt">Soapp requires permission to access contacts and storage in order to
    function properly</string>
    <string name="need_noti_permission_txt">Please enable Soapp to change systems settings in order to access Notifications</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="phonenumber">What\'s your phone number?</string>
    <string name="phonelabel">Phone Number</string>
    <string name="sendotp">Send Confirmation Code</string>
    <string name="six_digit_desc">A 6-digit confirmation code has been sent to your phone
        number, please wait for the code and input it into the field above. If you do not
        receive the code in 2 minutes, please click on the \"re-send code\" button to get
        a new code, or try again later.</string>
    <string name="invalidOTP">The 6-digit code is invalid, please click the \"re-send code\"
        button or try again later.</string>
    <string name="sync_contact_done">Contacts Synced Successfully</string>
    <string name="skip">SKIP</string>
    <string name="pVContinue">Continue</string>
    <string name="pVResend">Resend Code</string>
    <string name="searchHint">Search your country here</string>
    <string name="selectphoto">Select Photo</string>
    <string name="inp_name">Input your name</string>
    <string name="next">Next</string>
    <string name="search">Search</string>
    <string name="share_with">Share item with&#8230;</string>
    <string name="Featured">Featured</string>
    <string name="video_buffering">Buffering video:</string>
    <string name="no_promo">There are currently no promotions for this restaurant</string>
    <string name="TimeTxt">-:-</string>
    <string name="DateTxt">-/-/-</string>
    <string name="CurrentLocation">CURRENT LOCATION</string>
    <string name="nearby1">Nearby</string>
    <string name="view_all">View All</string>
    <string name="view_less">View Less</string>
    <string name="book_now">BOOK NOW!</string>
    <string name="book_title1">DATE</string>
    <string name="book_title2">TIME</string>
    <string name="book_guest_title">NO. OF PAX</string>
    <string name="book_promo_title">Select Promotion</string>
    <string name="book_promo_null">No Promo</string>
    <string name="booking_confirmation">Booking Confirmation</string>
    <string name="booking_confirmation_3_hours">You can only place a booking 3 hours ahead of now.</string>
    <string name="booking_no_attempts">You can no longer edit this booking as you have edited it 3 times.</string>
    <string name="booking_confirmed">Booking Confirmed</string>
    <string name="booking_cancelled">Booking Cancelled</string>
    <string name="booking_retry_1">You have</string>
    <string name="booking_retry_2">Are you sure you would like to continue with this booking?</string>
    <string name="booking_accept_status">Thank you. Your booking has been sent for review. Please
        check your status in \"My Bookings\". You have </string>
    <string name="attempt_left"> attempt left.</string>
    <string name="attempts_left"> attempts left.</string>
    <string name="thanks">Thank you</string>
    <string name="booking_sent_review">Booking sent for review</string>
    <string name="cancel_booking">Booking Cancellation</string>
    <string name="booking_cancellation_ask">Are you sure you\'d like to cancel and delete this
        booking?</string>
    <string name="booking_deleted">Booking Successfully Deleted</string>
    <string name="booking_cancelled_success">Booking Successfully Cancelled</string>
    <string name="booking_sent">Booking Code Sent</string>
    <string name="booking_set_appt_title">Update Appointment</string>
    <string name="booking_set_appt_msg">Would you like to update booking details to
        appointment?</string>
    <string name="booking_not_exist">Booking no longer exist as it has been cancelled or deleted</string>
    <string name="booking_progress">Submitting booking for review</string>
    <string name="share_booking">Share booking with…</string>
    <string name="booking_no_date_title">No Booking Date/Time</string>
    <string name="booking_no_date_msg">Please select a booking Date and time slot</string>
    <string name="booking_no_guest_title">No Guests Number</string>
    <string name="booking_no_guest_msg">Please select the number of guests for this booking</string>
    <string name="confirm">Confirm</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="filtered_fnb">Filtered F&amp;B</string>
    <string name="food_loading">Loading Restaurants</string>
    <string name="food_retry">Please click on the nearby button to try searching again.</string>
    <string name="food_gps">Please enable location access and GPS to search nearby restaurants.</string>
    <string name="food_loc_permission">Please enable location permission to search nearby restaurants.</string>
    <string name="food_detail_loading">Loading Details</string>
    <string name="food_title_main">D I S C O V E R</string>
    <string name="food_detail_loading_failed">Failed to Load Details</string>
    <string name="food_open_caps">OPEN NOW</string>
    <string name="food_closed_caps">CLOSED</string>
    <string name="food_open">Open Now</string>
    <string name="food_closed">Closed</string>
    <string name="contTermsCond">Please wait while we search for friends who are already on Soapp,
    and re-join old groups if you\'re a returning user.</string>
    <string name="searchContactHint">Search Contacts</string>
    <string name="refresh">Refresh Contacts</string>
    <string name="invite">Invite to Soapp</string>
    <string name="save">Save</string>
    <string name="saving_contact">Saving Contact</string>
    <string name="contact_exists">Contact already exists in Soapp</string>
    <string name="contact_details">Contact Details</string>
    <string name="sync_contacts_title">Sync Contacts</string>
    <string name="sync_contacts_msg">Your Soapp contacts will be synced with your phone
        contacts, which will take some time depending on the number of contacts.</string>
    <string name="contact_call">Call Contact</string>
    <string name="contact_call_msg">Would you like to call this contact\?</string>
    <string name="soapp_favourites">Favourites</string>
    <string name="start_fav">Tap here to start adding favourite restaurants now!</string>
    <string name="mybooking_title">My Bookings</string>
    <string name="start_booking">Tap here to start booking now!</string>
    <string name="share">Share</string>
    <string name="profile_grp">Group Profile</string>
    <string name="new_g_name_tap">Please input your group name</string>
    <string name="new_g_name">Group Name</string>
    <string name="popup_camera_string">Camera</string>
    <string name="popup_medialibrary">Gallery</string>
    <string name="popup_appointment">Appointment</string>
    <string name="popup_share_loc">Location</string>
    <string name="popup_share_contact">Contact</string>
    <string name="popup_share_res">Restaurant</string>
    <string name="settings_profile_img">Profile Image</string>
    <string name="settings_contact_us">Contact Us</string>
    <string name="edit">Edit</string>
    <string name="contact_email_title">Email (Optional):</string>
    <string name="contact_email_placeholder">Enter Your Email</string>
    <string name="contact_desc_title">Please describe the issue below:</string>
    <string name="contact_desc_placeholder">Enter Description of Issue</string>
    <string name="img_preview">Image Preview</string>
    <string name="action_rotate_anti_clockwise">Anti Clockwise</string>
    <string name="action_rotate_clockwise">Clockwise</string>
    <string name="action_crop">Crop</string>
    <string name="action_save">Save</string>
    <string name="camera">Camera</string>
</resources>