<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <!--<com.soapp.global.TouchImageView-->
    <!--android:id="@+id/img_single"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent" />-->


    <com.soapp.global.TouchImageView
        android:id="@+id/fullscreen_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:adjustViewBounds="true"
        android:contentDescription="@string/settings_profile_img"
        android:src="@drawable/default_img_full" />

    <ProgressBar
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/white"
        android:outlineProvider="bounds"
        android:visibility="gone" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_wthout_statusbar"
        android:background="@color/primaryDark2"
        android:theme="@style/toolbarBackBtnWhite"
        android:visibility="gone"
        app:title="@string/img_preview">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/share"
            android:textSize="16sp"
            android:visibility="gone" />

    </androidx.appcompat.widget.Toolbar>


</androidx.constraintlayout.widget.ConstraintLayout>