<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <com.soapp.global.TouchImageView
        android:id="@+id/profile_pic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:adjustViewBounds="true"
        android:contentDescription="@string/settings_profile_img"
        android:src="@drawable/default_img_400" />

    <ProgressBar
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/white"
        android:outlineProvider="bounds"
        android:visibility="gone" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_wthout_statusbar"
        android:background="@color/primaryDark2"
        android:minHeight="@dimen/toolbar_wthout_statusbar"
        android:theme="@style/toolbarBackBtnWhite"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:text="@string/profile_grp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@id/editbutton"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/editbutton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:src="@drawable/ic_pen_white_70px"
                android:text="@string/edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>


</RelativeLayout>