<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_wth_statusbar"
        android:minHeight="@dimen/toolbar_wth_statusbar"
        android:background="@color/grey2"
        android:elevation="10dp"
        android:textAlignment="center"
        android:theme="@style/toolbarBackBtnBlack"
        app:titleTextColor="@color/black"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/settings_contact_us"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center"
                android:fontFamily="@font/quicksand_bold"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/done_btn"/>

            <Button
                android:id="@id/done_btn"
                style="borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@null"
                android:text="Send"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="12.5dp"
        android:paddingEnd="0dp"
        android:paddingStart="50dp"
        android:text="@string/contact_email_title"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/tv_emailhere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12.5dp"
        android:layout_marginEnd="-20dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12.5dp"
        app:cardBackgroundColor="@color/grey5"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_email">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:ellipsize="end"
            android:hint="@string/contact_email_placeholder"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@color/grey9"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_issue_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:elevation="5dp"
        android:paddingStart="50dp"
        android:text="@string/contact_desc_title"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_emailhere" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginEnd="-20dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/grey5"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_issue_here">

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="250"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/contact_desc_placeholder"
            android:inputType="textMultiLine"
            android:padding="10dp"
            />

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>