<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_wth_statusbar"
        android:background="@color/primaryDark2"
        android:minHeight="@dimen/toolbar_wth_statusbar"
        android:theme="@style/toolbarBackBtnWhite"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp">
        <!--next icon-->
        <ImageView
            android:id="@+id/new_g_create_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_check_white_48dp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linear_group_create"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_below="@+id/toolbar"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/new_g_create_grp_img"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/settings_profile_img"
                android:scaleType="centerCrop"
                android:src="@drawable/grp_propic_circle_150px" />

            <TextView
                android:id="@+id/new_g_create_gallery"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/selectphoto"
                android:textColor="@color/primaryLogo"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/soapp_tab_divider_height"
                android:layout_marginTop="20dp"
                android:background="@color/grey5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/new_g_create_grp_name"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="2"
                    android:background="@android:color/transparent"
                    android:ellipsize="end"
                    android:hint="@string/new_g_name"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/grey9"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/soapp_tab_divider_height"
                android:background="@color/grey5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/new_g_name_tap"
                android:textColor="@color/grey9"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/soapp_tab_divider_height"
        android:layout_marginTop="173dp"
        android:background="@color/grey5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/new_g_create_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_group_create" />

</RelativeLayout>